--- a/index.html
+++ b/index.html
@@ -2218,7 +2218,7 @@ function toggleLayak(rowId, isLayak){
   const staff = tr.querySelector('.tca-staff');
   const btn   = tr.querySelector('button');
   if (isLayak && checks[0].checked) {
-    date.disabled = false; time.disabled = false; staff.disabled=false; btn.disabled = false; btn.removeAttribute('disabled'); btn.removeAttribute('disabled');
+    date.disabled = false; time.disabled = false; staff.disabled=false; btn.disabled = false; btn.removeAttribute('disabled');
   } else {
     date.disabled = true;  time.disabled = true; staff.disabled=true;  btn.disabled = true;
   }
@@ -2495,7 +2495,7 @@ function addNadiRow(){
       tcaDate.disabled = false;
       tcaTime.disabled = false;
       staff.disabled = false;
-      btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); btnDaftar.removeAttribute('disabled');
+      btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled');
     } else {
       tcaDate.disabled = true;
       tcaTime.disabled = true;
@@ -2512,7 +2512,8 @@ function addNadiRow(){
       tcaTime.disabled = true;
       staff.disabled = true;
       const voucher = row.querySelector('input[name="voucher"]');
-      if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); } else { btnDaftar.disabled = true; }
+      btnDaftar.disabled = (voucher && voucher.checked) ? false : true;
+      if (voucher && voucher.checked) btnDaftar.removeAttribute('disabled');
     }
     updateNadiSummary();
   });
@@ -2528,11 +2529,13 @@ function addNadiRow(){
     const staffName = staff.value.trim();
 
     
-    // --- Voucher mode: daftar terus ke Senarai TCA Call mengikut tarikh voucher ---
+    // Mod voucher: jika TCA voucher dicentang, daftar menggunakan Tarikh TCA (Voucher)
     const voucherEl = row.querySelector('input[name="voucher"]');
     const voucherDateEl = row.querySelector('input[name="voucherDate"]');
     if (voucherEl && voucherEl.checked) {
       const vDateRaw = voucherDateEl && voucherDateEl.value ? voucherDateEl.value : '';
+      // helper format DD/MM/YYYY (tanpa ubah fungsi lain)
+      const __fmtDDMMYYYY = (v)=>{ const m = /^([0-9]{4})-([0-9]{2})-([0-9]{2})$/.exec(v||''); return m?`${m[3]}/${m[2]}/${m[1]}`:v; };
       const vDate = __fmtDDMMYYYY(vDateRaw);
       if (!nama || (!ic && !tel)) { toast('Ralat', 'Isi sekurang-kurangnya Nama dan IC/Telefon', 'danger'); return; }
       if (!vDate) { toast('Ralat', 'Sila pilih Tarikh TCA (Voucher)', 'danger'); return; }
@@ -2540,16 +2543,7 @@ function addNadiRow(){
       const staffAuto = (window.STAFF_EMAIL || staffName || '').trim();
       const alamatWithRemark = (alamat ? alamat + ' — ' : '') + 'Saringan kesihatan voucher';
       try {
-        const res = await postForm({
-          action: 'daftarPesakit',
-          namaPesakit: nama || 'Pesakit Voucher',
-          noIC: ic || '',
-          noTelefon: tel || '',
-          alamat: alamatWithRemark,
-          tarikhTCA: vDate,
-          masaTCA: masa,
-          namaStaff: staffAuto
-        }, { msg: 'Mendaftar pesakit (voucher)...' });
+        const res = await postForm({ action:'daftarPesakit', namaPesakit:(nama||'Pesakit Voucher'), noIC:(ic||''), noTelefon:(tel||''), alamat:alamatWithRemark, tarikhTCA:vDate, masaTCA:masa, namaStaff:staffAuto }, { msg:'Mendaftar pesakit (voucher)...' });
         if (res.status === 'success') {
           toast('Berjaya', 'Pesakit (voucher) berjaya didaftarkan', 'success');
           updateNadiRowData(row);
@@ -3139,15 +3133,17 @@ function mergeLiveRowsIntoUI(items){
     if (layak && takLayak && tcaDate && tcaTime && staff && btnDaftar){
       if (layak.checked){
         takLayak.checked = false;
-        tcaDate.disabled = false; tcaTime.disabled = false; staff.disabled = false; btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); btnDaftar.removeAttribute('disabled');
+        tcaDate.disabled = false; tcaTime.disabled = false; staff.disabled = false; btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled');
       } else if (takLayak.checked){
         layak.checked = false;
         tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  const voucher = row.querySelector('input[name="voucher"]');
-        if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); } else { btnDaftar.disabled = true; }
+        if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); btnDaftar.removeAttribute('disabled'); }
+        else { btnDaftar.disabled = true; }
       } else {
         // tiada pilihan → disable TCA
         tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  const voucher = row.querySelector('input[name="voucher"]');
-        if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); } else { btnDaftar.disabled = true; }
+        if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); btnDaftar.removeAttribute('disabled'); }
+        else { btnDaftar.disabled = true; }
       }
     }
   });
@@ -3975,6 +3971,7 @@ function saveNadiStateDebounced(){
   clearTimeout(window.__saveNadiT);
   window.__saveNadiT = setTimeout(saveNadiState, 400);
 }
+
   function restoreNadiState(){
     try{
       const raw = localStorage.getItem(NADI_KEY);
@@ -4045,19 +4042,18 @@ function saveNadiStateDebounced(){
       const tak = tr?.querySelector('input[name="takLayak"]');
       if (el.checked && tak) tak.checked = true;
       const btn = tr?.querySelector('.nadi-daftar');
-      if (btn) {
-        if (el.checked) { btn.disabled = false; btn.removeAttribute('disabled'); btn.removeAttribute('disabled'); }
-        else {
-          const ly = tr?.querySelector('.nadi-layak');
-          btn.disabled = !(ly && ly.checked);
-        }
-      }
-      saveNadiStateDebounced();
+if (btn) {
+  if (el.checked) { btn.disabled = false; btn.removeAttribute('disabled'); btn.removeAttribute('disabled'); }
+  else {
+    const ly = tr?.querySelector('.nadi-layak');
+    btn.disabled = !(ly && ly.checked);
+  }
+}
+saveNadiStateDebounced();
     }
     if (el && (el.matches('#nadiContainer input, #nadiContainer textarea'))) {
-      saveNadiStateDebounced();
-
-      saveNadiStateDebounced();
+     saveNadiStateDebounced();
+saveNadiStateDebounced();
     }
   }, true);
 
