--- a/index.html
+++ b/index.html
@@ -2512,8 +2512,8 @@ function addNadiRow(){
       tcaTime.disabled = true;
       staff.disabled = true;
       const voucher = row.querySelector('input[name="voucher"]');
-      btnDaftar.disabled = (voucher && voucher.checked) ? false : true;
-      if (voucher && voucher.checked) btnDaftar.removeAttribute('disabled');
+      if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); btnDaftar.removeAttribute('disabled'); }
+      else { btnDaftar.disabled = true; }
     }
     updateNadiSummary();
   });
@@ -2529,35 +2529,33 @@ function addNadiRow(){
     const staffName = staff.value.trim();
 
     
-    // Mod voucher: jika TCA voucher dicentang, daftar menggunakan Tarikh TCA (Voucher)
+    // Mod voucher: daftar menggunakan Tarikh TCA (Voucher)
     const voucherEl = row.querySelector('input[name="voucher"]');
     const voucherDateEl = row.querySelector('input[name="voucherDate"]');
     if (voucherEl && voucherEl.checked) {
-      const vDateRaw = voucherDateEl && voucherDateEl.value ? voucherDateEl.value : '';
-      // helper format DD/MM/YYYY (tanpa ubah fungsi lain)
-      const __fmtDDMMYYYY = (v)=>{ const m = /^([0-9]{4})-([0-9]{2})-([0-9]{2})$/.exec(v||''); return m?`${m[3]}/${m[2]}/${m[1]}`:v; };
-      const vDate = __fmtDDMMYYYY(vDateRaw);
-      if (!nama || (!ic && !tel)) { toast('Ralat', 'Isi sekurang-kurangnya Nama dan IC/Telefon', 'danger'); return; }
-      if (!vDate) { toast('Ralat', 'Sila pilih Tarikh TCA (Voucher)', 'danger'); return; }
+      const raw = voucherDateEl && voucherDateEl.value ? voucherDateEl.value : '';
+      const __fmtDDMMYYYY = (v)=>{ const m=/^(\d{4})-(\d{2})-(\d{2})$/.exec(v||''); return m?`${m[3]}/${m[2]}/${m[1]}`:v; };
+      const vDate = __fmtDDMMYYYY(raw);
+      if (!nama || (!ic && !tel)) { toast('Ralat','Isi sekurang-kurangnya Nama dan IC/Telefon','danger'); return; }
+      if (!vDate) { toast('Ralat','Sila pilih Tarikh TCA (Voucher)','danger'); return; }
       const masa = '09:00';
       const staffAuto = (window.STAFF_EMAIL || staffName || '').trim();
       const alamatWithRemark = (alamat ? alamat + ' — ' : '') + 'Saringan kesihatan voucher';
       try {
         const res = await postForm({ action:'daftarPesakit', namaPesakit:(nama||'Pesakit Voucher'), noIC:(ic||''), noTelefon:(tel||''), alamat:alamatWithRemark, tarikhTCA:vDate, masaTCA:masa, namaStaff:staffAuto }, { msg:'Mendaftar pesakit (voucher)...' });
         if (res.status === 'success') {
-          toast('Berjaya', 'Pesakit (voucher) berjaya didaftarkan', 'success');
+          toast('Berjaya','Pesakit (voucher) berjaya didaftarkan','success');
           updateNadiRowData(row);
           try {
             const r = await getJSON({ action:'getTCACall', all:1 });
             window.TCA_ALL = (r.status==='success') ? (r.data||[]) : [];
             const active = document.querySelector('#tcaFilter .active')?.dataset.filter || 'all';
             if (typeof renderTcaList==='function') renderTcaList(active);
-          } catch(e) { /* senyap */ }
+          } catch(e){ /* senyap */ }
         } else { throw new Error(res.message || 'Gagal mendaftar pesakit (voucher)'); }
-      } catch(e) { toast('Ralat', e.message, 'danger'); }
+      } catch(e){ toast('Ralat', e.message, 'danger'); }
       return;
     }
-
 if (!nama || !ic || !tel || !date || !time || !staffName) {
       toast('Ralat', 'Sila isi semua maklumat', 'danger');
       return;
@@ -3141,9 +3139,7 @@ function mergeLiveRowsIntoUI(items){
         else { btnDaftar.disabled = true; }
       } else {
         // tiada pilihan → disable TCA
-        tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  const voucher = row.querySelector('input[name="voucher"]');
-        if (voucher && voucher.checked) { btnDaftar.disabled = false; btnDaftar.removeAttribute('disabled'); btnDaftar.removeAttribute('disabled'); }
-        else { btnDaftar.disabled = true; }
+        tcaDate.disabled = true;  tcaTime.disabled = true;  staff.disabled = true;  btnDaftar.disabled = true;
       }
     }
   });
@@ -4038,28 +4034,28 @@ function saveNadiStateDebounced(){
       const tr = el.closest('tr');
       const dateInput = tr?.querySelector('input[name="voucherDate"]');
       if (dateInput) dateInput.disabled = !el.checked;
-      // Jika voucher dicentang, set takLayak true supaya tidak disimpan sebagai "layak"
       const tak = tr?.querySelector('input[name="takLayak"]');
       if (el.checked && tak) tak.checked = true;
       const btn = tr?.querySelector('.nadi-daftar');
-if (btn) {
-  if (el.checked) { btn.disabled = false; btn.removeAttribute('disabled'); btn.removeAttribute('disabled'); }
-  else {
-    const ly = tr?.querySelector('.nadi-layak');
-    btn.disabled = !(ly && ly.checked);
-  }
-}
-saveNadiStateDebounced();
+      if (btn) {
+        if (el.checked) { btn.disabled = false; btn.removeAttribute('disabled'); btn.removeAttribute('disabled'); }
+        else {
+          const ly = tr?.querySelector('.nadi-layak');
+          btn.disabled = !(ly && ly.checked);
+        }
+      }
+      
+      const tr = el.closest('tr');
+      const dateInput = tr?.querySelector('input[name="voucherDate"]');
+      if (dateInput) dateInput.disabled = !el.checked;
+      // Jika voucher dicentang, set takLayak true supaya tidak disimpan sebagai "layak"
+      const tak = tr?.querySelector('input[name="takLayak"]');
+      if (el.checked && tak) tak.checked = true;
+      saveNadiStateDebounced();
     }
     if (el && (el.matches('#nadiContainer input, #nadiContainer textarea'))) {
-     saveNadiStateDebounced();
+      saveNadiStateDebounced();
 saveNadiStateDebounced();
-    }
-  }, true);
-
-  document.addEventListener('input', function(e){
-    const el = e.target;
-    if (el && el.closest('#nadiContainer')) saveNadiStateDebounced();
   }, true);
 
   // Panggil ensureVoucherColumns apabila baris ditambah (mutasi DOM)
