--- a/index.html
+++ b/index.html
@@ -2416,10 +2416,10 @@ function addNadiRow(){
     </td>
 
     <td class="text-center">
-      <input class="form-check-input nadi-voucher" type="checkbox">
+      <input class="form-check-input nadi-voucher" type="checkbox" name="voucher">
     </td>
     <td>
-      <input type="date" class="form-control form-control-sm nadi-voucher-date" disabled>
+      <input type="date" class="form-control form-control-sm nadi-voucher-date" disabled name="voucherDate">
     </td>
     <!-- Kolum Remark baharu -->
     <td class="nadi-input-cell">
